ユーザー登録機能

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,9 @@
         <li>
           <%= link_to "#{ t('.create new') }", new_task_path %>
         </li>
+        <li>
+          <%= link_to "#{ t('.create user') }", new_user_path %>
+        </li>
       </ul>
     </div>
   </div>
