Sessionコントローラの作成、ログイン/ログアウト機能

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
-<p class="text-success bg-success"><%= notice %></p>
+<p class="text-danger bg-danger"><%= notice %></p>
 <h3><%= t('dictionary.words.task_name') %>:</h3>
 <%= @task.task_name %>
 <h3><%= t('dictionary.words.details') %>:</h3>
