--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,2 @@
-<p class="text-danger bg-danger"><%= notice %></p>
+<p class="text-success bg-success"><%= notice %></p>
 <%= render 'form', task: @task %>
