ユーザー登録から自動ログイン

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-  <h3><%= t('dictionary.words.user_name') %></h3>
-  <%= @user.user_name %>
-  <h3><%= t('dictionary.words.email') %></h3>
-  <%= @user.email %>
+<p class="text-success bg-success"><%= notice %></p>
+<h3><%= t('dictionary.words.user_name') %></h3>
+<%= @user.user_name %>
+<h3><%= t('dictionary.words.email') %></h3>
+<%= @user.email %>
