--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,13 +1,30 @@
 <%= form_with(model: user, local: true) do |f| %>
-  <%= f.hidden_field :user_name %>
-  <%= f.hidden_field :email %>
-  <%= f.label :user_name %>
-  <%= f.text_field :user_name %>
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-  <%= f.submit %>
+  <div class="form-group">
+
+  </div>
+  <div class="form-group">
+    <%= f.hidden_field :user_name %>
+    <%= f.hidden_field :email %>
+    <%# <%= f.hidden_field :password %>
+    <%# <%= f.hidden_field :password_confirmation %>
+  </div>
+  <div class="form-group">
+    <%= f.label :user_name %>
+    <%= f.text_field :user_name %>
+  </div>
+  <div class="form-group">
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
+  <div class="form-group">
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
+  <div class="form-group">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+  </div>
+  <div class="form-group">
+    <%= f.submit %>
+  </div>
 <% end %>
