--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -8,3 +8,4 @@
 <% @tasks.each do |task| %>
   <%= task.task_name %><br>
 <% end %>
+<%= link_to t('admin.users.form.back to index'), admin_users_path %>
