--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,9 @@
           <li>
             <%= link_to "#{ t('.create new') }", new_task_path %>
           </li>
+          <li>
+            <%= link_to "#{ t('.admin') }", admin_users_path %>
+          </li>
         <% else %>
           <li>
             <%= link_to "#{ t('.login') }", new_session_path %>
