--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <p class="text-success bg-success"><%= notice %></p>
 <h3><%= t('dictionary.words.user_name') %></h3>
-<%= @user.user_name %>
+<p id="show_user_name"><%= @user.user_name %></p>
 <h3><%= t('dictionary.words.email') %></h3>
-<%= @user.email %>
+<p id="show_email"><%= @user.email %>
+</p>
