--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -14,9 +14,10 @@
       <tr>
         <td><%= user.user_name %>&nbsp;</td>
         <td><%= user.tasks.count %></td>
-        <td><%= link_to t('dictionary.words.details'), admin_user_path(user.id), class: 'btn btn-info btn-sm button' %></td>
-        <td><%= link_to t('dictionary.words.edit'), edit_admin_user_path(user.id), class: 'btn btn-warning btn-sm button' %></td>
-        <td><%= link_to t('dictionary.words.delete'), admin_user_path(user.id), method: :delete, class: 'btn btn-danger btn-sm button' %></td>
+        <td id="admin_show">
+          <%= link_to t('dictionary.words.details'), admin_user_path(user.id), class: 'btn btn-info btn-sm button admin_show' %></td>
+        <td id="admin_edit"><%= link_to t('dictionary.words.edit'), edit_admin_user_path(user.id), class: 'btn btn-warning btn-sm button' %></td>
+        <td id="admin_delete"><%= link_to t('dictionary.words.delete'), admin_user_path(user.id), method: :delete, class: 'btn btn-danger btn-sm button' %></td>
       </tr>
     <% end %>
   </tbody>
