--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -32,7 +32,7 @@
       <%# <%= f.select :priority, { t('.high') => 2, t('.middle') => 1, t('.low') => 0 }, { include_blank: true } %>
     </div>
 
-    <div class="form-group">
+    <div class="form-group labels">
       <% label = Label.where(user_id: [nil, current_user.id]) %>
       <%= f.collection_check_boxes :label_ids, label, :id, :label_name, include_hidden: false %>
     </div>
