--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,6 +15,8 @@
 
 <h3><%= t('dictionary.words.labels') %>:</h3>
 <% @label_ids.each do |label_id| %>
-  <%= label_name = Label.find_by(id:label_id).label_name %><br>
+  <p id="labels">
+  <%= label_name = Label.find_by(id:label_id).label_name %>
+  </p><br>
 <% end %>
 <%= link_to t('.index'), tasks_path, class: 'btn btn-link' %>
