--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,4 +1,5 @@
 <p class="text-success bg-success"><%= notice %></p>
+<p class="text-danger bg-danger"><%= danger %></p>
 <h3><%= t('dictionary.words.user_name') %></h3>
 <%= @user.user_name %>
 <h3><%= t('dictionary.words.email') %></h3>
