--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,3 @@
 <p class="text-success bg-success"><%= notice %></p>
+<p class="text-danger bg-danger"><%= danger %></p>
 <%= render 'form', task: @task %>
