--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <p class="text-success bg-success"><%= notice %></p>
-<h3><%= t('dictionary.words.user_name') %></h3>
+<p class="text-danger bg-danger"><%= danger %></p>
 <p id="show_user_name"><%= @user.user_name %></p>
 <h3><%= t('dictionary.words.email') %></h3>
 <p id="show_email"><%= @user.email %>
