--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,2 +1,4 @@
+<p class="text-success bg-success"><%= notice %></p>
+<p class="text-danger bg-danger"><%= danger %></p>
 <h1><%= t('admin.users.form.create user') %></h1>
 <%= render 'form', user: @user %>
