--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,21 +1,17 @@
 <p class="text-success bg-success"><%= notice %></p>
+<p class="text-danger bg-danger"><%= danger %></p>
+<p class="text-warning bg-warning"><%= warning %></p>
 <h1><%= t('.title') %></h1>
 <div class="row">
-<!-- <div class="search_form"> -->
   <%= form_with(url: tasks_path, local: true, method: 'get', class: 'form-horizontal') do |f| %>
-  <%# <%= form_with(url: tasks_path, local: true, method: 'get')do |f| %>
-    <!-- <ul class="row"> -->
     <div class="form-group col-md-6">
       <%= f.label t('.task_name'), :class => 'control-label form_item' %>
-      <%# <%= f.label t('.task_name') %>
       <%= f.text_field :task_name, :class => 'form-control' %>
     </div>
     <div class="form-group col-md-6">
-    <!-- <div class="form-group col-md-offset-1 col-md-6"> -->
       <%= f.label t('.status'), :class => 'control-label form_item' %>
       <%= f.select :status, [[t('.Not started'),'未着手'],[t('.Already started'),'着手中'],[t('.done'),'完了']], include_blank: t('.select'), :class => 'form-control' %>
       <%= f.submit t('.search'), :class => 'btn btn-primary btn-sm active' %>
-      <%# <%= f.submit t('.search') %>
     </div>
   <% end %>
 </div>
@@ -27,10 +23,8 @@
         <th><%= t('.task_name') %></th>
         <th><%= t('.details') %></th>
         <th><%= t('.created_at') %></th>
-        <!-- <th><%= t('.valid_date') %></th> -->
         <th><%= link_to t('.valid_date'), tasks_path(order_valid: 'valid_date'), class: 'btn btn-default btn-sm btn-sort' %></th>
         <th><%= t('.status') %></th>
-        <!-- <th><%= t('.priority') %></th> -->
         <th><%= link_to t('.priority'), tasks_path(order_priority: 'priority'), class: 'btn btn-default btn-sm btn-sort' %></th>
         <th colspan="6"></th>
       </tr>
