--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,4 @@
-<p class="text-danger bg-danger"><%= notice %></p>
+<p class="text-success bg-success"><%= notice %></p>
+<p class="text-danger bg-danger"><%= danger %></p>
 <h1>新規登録</h1>
 <%= render 'form', task:@task %>
