--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -34,11 +34,11 @@
       <tr id="sequence">
           <td id="task_name"><%= task.task_name %></td>
           <td><%= task.details %></td>
-          <td><%= l task.created_at, format: :long %></td>
+          <td id="created_at"><%= l task.created_at, format: :long %></td>
           <td id="valid_shown"><%= l task.valid_date %></td>
           <td id="status_shown"><%= task.status %></td>
           <td id="priority_shown"><%= task.priority %></td>
-          <td><%= link_to t('.show'), task_path(task.id), class: 'btn btn-info button' %></td>
+          <td><%= link_to t('.show'), task_path(task.id), class: 'btn btn-info button details' %></td>
           <td><%= link_to t('.edit'), edit_task_path(task.id), class: 'btn btn-warning button' %></td>
           <td><%= link_to t('.delete'), task_path(task.id), method: :delete, class: 'btn btn-danger button' %></td>
       </tr>
