オプション要件1: 終了間近や期限の過ぎたタスクのアラート、一覧表示機能

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,9 @@
+<% if warning.present? %>
+  <p class="text-warning bg-warning"><%= warning %></p><br>
+  <%= link_to t('.valid index'), sessions_path %>
+<% end %>
 <p class="text-success bg-success"><%= notice %></p>
+
 <h1><%= t('.title') %></h1>
 <div class="row">
 <!-- <div class="search_form"> -->
