グループ、UserGroup(中間テーブルのモデル)の実装(作成、参加、離脱まで)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,12 @@
           <p class="text-danger bg-warning"><%= msg %></p>
         <% end %>
       <% end %>
+      <% if @group && @group.errors.any? %>
+        <p class="text-danger bg-danger"><%= @group.errors.count %> 件のエラーがあります。</p>
+        <% @group.errors.full_messages.each do |msg| %>
+          <p class="text-danger bg-warning"><%= msg %></p>
+        <% end %>
+      <% end %>
       <div class="container">
         <%= yield %>
       </div>
