--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,10 @@
             <%= link_to "#{ t('.create new') }", new_task_path %>
           </li>
           <li>
+            <%= link_to "#{ t('.groups') }", groups_path %>
+          </li>
+
+          <li>
             <%= link_to "#{ t('.admin') }", admin_users_path %>
           </li>
         <% else %>
