--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,6 +1,7 @@
 <div class="form-row">
   <%= form_with(model: group, local: true)do |f| %>
     <div class="form-group">
+      <%= f.hidden_field :user_id, multiple: true %>
     </div>
     <div class="form-group">
       <%= f.label :group_name %>
