--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,7 +1,20 @@
-<h1><%= t('groups.show.title') %></h1>
+<p class="text-success bg-success"><%= notice %></p>
 <h3><%= t('groups.show.group_name') %></h3>
 <%= @group.group_name %>
-<h3><%= t('groups.show.group_users') %></h3>
-<%# <%= @group.users.each do |user| %> %>
-<%# user.tasks.each do |task| %>
-<%# link_to task.task_name, task_path(task.id) %>
+<div class="table-responsive">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th><%= t('groups.show.group_users') %></th>
+        <th><%= t('groups.show.task') %></th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @group.users.each do |user| %>
+        <td><%= user.user_name %></td>
+        <td><%= link_to t('groups.show.tasks'), user_groups_path %></td>
+      <% end %>
+    </tbody>
+  </table>
+</div>
