添付ファイル、タスクカレンダー、使用率グラフ化(<-クエリ要検証)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,9 @@
           <li>
             <%= link_to "#{ t('.groups') }", groups_path %>
           </li>
+          <li>
+            <%= link_to "#{ t('.labels') }", labels_path %>
+          </li>
 
           <li>
             <%= link_to "#{ t('.admin') }", admin_users_path %>
