--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,7 @@
 <%= form_with(model: user, local: true) do |f| %>
   <div class="form-group">
-
+    <%# (column_name)_cache %>
+    <%= f.hidden_field :image_cache %>
   </div>
   <div class="form-group">
     <%= f.hidden_field :user_name %>
@@ -23,6 +24,10 @@
   <div class="form-group">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
   </div>
   <div class="form-group">
     <%= f.submit %>
