--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -32,7 +32,8 @@
     </div>
     <div class="form-group">
       <%= f.label t('.file') %>
-      <%= f.file_field :file %>
+      <%= f.file_field :file, accept: 'image/png, image/jpeg, image/gif' %>
+      <%# <%= f.file_field :file %>
     </div>
 
     <div class="form-group">
